--- a/src/components/Certification.astro
+++ b/src/components/Certification.astro
@@ -1,10 +1,11 @@
 ---
-import H3 from "../components/H3.astro";
-import { Image } from "astro:assets";
+import H3 from '../components/H3.astro';
+import { Image } from 'astro:assets';
 
 export interface Props {
   title: string;
   text?: string;
+  // biome-ignore lint/suspicious/noExplicitAny: <explanation>
   image: any;
 }
 
@@ -16,16 +17,16 @@ const { title, text, image } = Astro.props as Props;
     <div>
       <Image
         src={image}
-        alt="certification icon"
-        height="150"
-        width="150"
-        class="border rounded-full"
+        alt='certification icon'
+        height='150'
+        width='150'
+        class='border rounded-full'
       />
     </div>
-    <div class="flex flex-col gap-1">
+    <div class='flex flex-col gap-1'>
       <!-- <H3 header={title}/> -->
-      <h3 class="text-lightBlue">{title}</h3>
-      <p class="">{text}</p>
+      <h3 class='text-lightBlue'>{title}</h3>
+      <p class=''>{text}</p>
     </div>
   </div>
 </div>
