--- a/src/components/DownloadIcon.astro
+++ b/src/components/DownloadIcon.astro
@@ -1,29 +1,29 @@
 <!doctype html>
-<div class="flex flex-row w-full justify-center mb-4">
-  <a href="/Thomas Faddegon - UX Engineer Resume 2024.pdf" target="_blank">
+<div class='flex flex-row w-full justify-center mb-4'>
+  <a href='/Thomas Faddegon - Website Manager 2025.pdf' target='_blank'>
     <div
-      class="flex flex-row items-center download cursor-pointer text-xl text-purple hover:text-lavendar font-bold"
+      class='flex flex-row items-center download cursor-pointer text-xl text-purple hover:text-lavendar font-bold'
     >
       Download &nbsp;
 
       <svg
-        fill="#4B4BFA"
-        version="1.1"
-        id="Capa_1"
-        xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink"
-        width="15px"
-        height="15px"
-        viewBox="0 0 36.375 36.376"
-        xml:space="preserve"
+        fill='#4B4BFA'
+        version='1.1'
+        id='Capa_1'
+        xmlns='http://www.w3.org/2000/svg'
+        xmlns:xlink='http://www.w3.org/1999/xlink'
+        width='15px'
+        height='15px'
+        viewBox='0 0 36.375 36.376'
+        xml:space='preserve'
       >
         <g>
           <path
-            d="M33.938,25.626v8.25c0,1.383-1.119,2.5-2.5,2.5h-26.5c-1.381,0-2.5-1.117-2.5-2.5v-8.25c0-1.381,1.119-2.5,2.5-2.5
+            d='M33.938,25.626v8.25c0,1.383-1.119,2.5-2.5,2.5h-26.5c-1.381,0-2.5-1.117-2.5-2.5v-8.25c0-1.381,1.119-2.5,2.5-2.5
 		s2.5,1.119,2.5,2.5v5.75h21.5v-5.75c0-1.381,1.119-2.5,2.5-2.5S33.938,24.245,33.938,25.626z M16.42,27.768
 		c0.488,0.488,1.129,0.732,1.768,0.732c0.643,0,1.279-0.244,1.77-0.732l7.5-7.498c0.978-0.975,0.978-2.558,0-3.535
 		c-0.977-0.977-2.561-0.977-3.535,0l-3.231,3.232V2.5c0-1.381-1.119-2.5-2.5-2.5s-2.5,1.119-2.5,2.5v17.467l-3.232-3.232
-		c-0.977-0.977-2.561-0.977-3.535,0c-0.977,0.978-0.977,2.56,0,3.535L16.42,27.768z"
+		c-0.977-0.977-2.561-0.977-3.535,0c-0.977,0.978-0.977,2.56,0,3.535L16.42,27.768z'
           ></path>
         </g>
       </svg>
