--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,58 +1,63 @@
 ---
-import Button from "./Button.astro";
+import Button from './Button.astro';
 // import me from "../images/people/me.png";
-import me from "../images/people/me-3.png";
-import { Image } from "astro:assets";
+import me from '../images/people/me-3.png';
+import { Image } from 'astro:assets';
 ---
 
 <section>
-  <div class="container container-large">
-    <div class="padding-global">
-      <div class="padding-extra">
+  <div class='container container-large'>
+    <div class='padding-global'>
+      <div class='padding-extra'>
         <div
-          class="grid grid-cols-1 lg:grid-cols-12 gap-12 lg:gap-16 w-full pt-12 lg:pt-20 pb-20 lg:pb-24"
-          id="header-content"
+          class='grid grid-cols-1 lg:grid-cols-12 gap-12 lg:gap-16 w-full pt-12 lg:pt-20 pb-20 lg:pb-24'
+          id='header-content'
         >
           <div
-            class="col-span-1 lg:col-span-7 lg:pr-4 flex flex-col gap-5 justify-center"
-            id="header-text"
+            class='col-span-1 lg:col-span-7 lg:pr-4 flex flex-col gap-5 justify-center'
+            id='header-text'
           >
             <h1>
               Hi! I'm Thomas. <br /> I make websites & digital applications <em
                 >better</em
               >.
             </h1>
-
             <p>
-              As a UX engineer with over a decade of expertise in digital
-              product design and development, I create seamless experiences that
-              captivate users and drive business growth.
+              As a website manager with over a decade of expertise in digital
+              product design and development, I create seamless online
+              experiences that captivate users and drive business growth.
             </p>
-            <div class="flex flex-wrap gap-4">
-              <Button text="Get in Touch" type="primary" link="/contact" />
-              <Button text="See My Work" type="secondary" link="#portfolio" />
+            <div class='flex flex-wrap gap-4'>
+              <Button text='Get in Touch' type='primary' link='/contact' />
+              <Button text='My Resume' type='secondary' link='/resume' />
             </div>
-            <div class="text-sm uppercase flex flex-wrap gap-x-3 gap-y-2 mt-1">
-              <h6>Front-End Development</h6>
+            <div class='text-sm uppercase flex flex-wrap gap-x-3 gap-y-2 mt-1'>
+              <h6>Website Management</h6>
               <span>|</span>
-              <h6>UX/UI</h6>
+              <h6>Web Development</h6>
               <span>|</span>
               <h6>Product Strategy</h6>
               <span>|</span>
-              <h6>Data Analysis</h6>
+              <h6>Digital Marketing</h6>
+              <span>|</span>
+              <h6>UX/UI</h6>
+              <span>|</span>
+              <h6>SEO</h6>
+              <span>|</span>
+              <h6>Conversion Rate Optimization</h6>
             </div>
           </div>
           <div
-            class="col-span-1 w-3/4 md:w-1/2 lg:w-full lg:col-span-5 order-first lg:order-last"
-            id="header-image"
+            class='col-span-1 w-3/4 md:w-1/2 lg:w-full lg:col-span-5 order-first lg:order-last'
+            id='header-image'
           >
             <Image
               src={me}
-              alt="Thomas"
-              width="400"
-              height="400"
-              class="rounded-xl w-full"
-              loading="eager"
+              alt='Thomas'
+              width='400'
+              height='400'
+              class='rounded-xl w-full'
+              loading='eager'
             />
           </div>
         </div>
