--- a/src/components/Position.astro
+++ b/src/components/Position.astro
@@ -1,34 +1,30 @@
 ---
-import H3 from "./H3.astro";
+import H3 from './H3.astro';
 
 export interface Props {
   title: string;
   location: string;
-  years: any;
-  description: string;
   link: string;
+  years: string;
 }
 
-const { title, location, years, description, link } = Astro.props as Props;
+const { title, location, link, years } = Astro.props;
 ---
 
-<div class="w-full">
-  <div class="flex flex-col">
-    <div class="flex flex-start mb-[-2px]">
-      <!-- <H3
-        header={title}
-        classes="text-lg font-bold"
-        hideBracketOnMobile={true}
-      /> -->
-      <h3 class="text-lightBlue">{title}</h3>
+<div class='w-full'>
+  <div class='flex flex-col'>
+    <div class='flex flex-start mb-[-2px]'>
+      <h3 class='text-lightBlue'>{title}</h3>
     </div>
-    <div class="mb-[1px]">
-      <a href={link} target="_blank">
-        <span class="underline hover:text-lavendar">{location}</span></a
+    <div class='mb-[1px]'>
+      <a href={link} target='_blank'>
+        <span class='underline hover:text-lavendar'>{location}</span></a
       >
     </div>
   </div>
 
-  <div class="mb-3"><span class="text-[15px] italic">{years}</span></div>
-  <div><span><p>{description}</p></span></div>
+  <div class='mb-3'><span class='text-[15px] italic'>{years}</span></div>
+  <div>
+    <slot />
+  </div>
 </div>
