--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,42 +1,66 @@
 ---
-import Card from "../components/Card.astro";
-import codeIcon from "../images/icons/code-icon-1.png";
-import dataIcon from "../images/icons/data-icon-1.png";
-import designIcon from "../images/icons/design-icon-1.png";
+import Card from '../components/Card.astro';
+import codeIcon from '../images/icons/code-icon-1.png';
+import dataIcon from '../images/icons/data-icon-1.png';
+import designIcon from '../images/icons/design-icon-1.png';
+import cmsIcon from '../images/icons/cms.png';
+import seoIcon from '../images/icons/seo.png';
+import pmIcon from '../images/icons/pm.png';
 ---
 
 <section>
-  <div class="container container-large">
-    <div class="padding-global py-20 lg:py-32">
-      <div class="padding-extra">
-        <div class="flex w-full flex-col">
-          <div class="flex">
-            <h2 class="mb-8">My Skills</h2>
+  <div class='container container-large'>
+    <div class='padding-global py-20 lg:py-32'>
+      <div class='padding-extra'>
+        <div class='flex w-full flex-col'>
+          <div class='flex'>
+            <h2 class='mb-8'>My Skills</h2>
           </div>
 
           <!-- 3 Boxes -->
-          <div class="flex items-stretch">
-            <div class="flex flex-col lg:flex-row lg:gap-16">
+          <div class='flex items-stretch'>
+            <div class='grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-16'>
               <Card
-                header="Front-End Development"
-                text="I build responsive, high-performing digital experiences using cutting-edge web technologies including Javascript, Typescript, React, Next, and Supabase."
+                header='Website/CMS Management'
+                text="I manage and optimize website content using CMS's like WordPress, Webflow, and Sanity, streamlining workflows and building new features to support writers, marketers, designers, and developers."
+                icon={cmsIcon}
+                classes='w-full '
+                nudge='-left-1'
+              />
+              <Card
+                header='Web Development'
+                text='I build responsive, high-performing websites and applications using cutting-edge web technologies including Javascript/Typescript, React, Next, and AWS.'
                 icon={codeIcon}
-                classes="w-full max-w-md xl:w-1/3"
-                nudge="-left-1"
+                classes='w-full'
+                nudge='-left-1'
               />
               <Card
-                header="UX/UI Design"
-                text="I create frictionless user journeys and easy-to-navigate interfaces that boost engagement and accomplish business objectives."
-                icon={designIcon}
-                classes="w-full max-w-md xl:w-1/3"
-                nudge="-left-1"
-              />
-              <Card
-                header="Data-Driven Optimization"
-                text="I optimize for conversions and sales with analytics-driven insights from Google Analytics, Optimizely, and Python libraries like pandas and matplotlib."
+                header='Data-Driven Optimization'
+                text='I boost conversions and sales using analytics-driven insights from Hubspot, Google Analytics, Optimizely, and Hotjar, as well as code-focused solutions like SQL and pandas.'
                 icon={dataIcon}
-                classes="w-full max-w-md xl:w-1/3"
-                nudge="-left-1"
+                classes='w-full'
+                nudge='-left-1'
+              />
+              <Card
+                header='SEO & Content Strategy'
+                text='I improve search rankings and organic visibility through technical SEO, structured content, and keyword-driven strategies, ensuring content reaches the right audience.'
+                icon={seoIcon}
+                classes='w-full'
+                nudge='-left-1'
+              />
+              <Card
+                header='UX/UI Design'
+                text='I create frictionless user journeys and easy-to-navigate interfaces using Miro and Figma to boost engagement and accomplish business objectives.'
+                icon={designIcon}
+                classes='w-full '
+                nudge='-left-1'
+              />
+              <Card
+                header='Project Management'
+                text='I bring together designers, developers, and marketers to successfully deliver high-impact digital projects on time, within budget, and built to scale.'
+                icon={pmIcon}
+                classes='w-full '
+                nudge='-left-1'
               />
             </div>
           </div>
