--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,231 +5,231 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;300;400;500;600&display=swap");
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 :root {
-  background-color: #141416;
+	background-color: #141416;
 }
 
 html,
 body {
-  min-height: 100%;
+	min-height: 100%;
 }
 
 @font-face {
-  font-family: "Manrope, sans-serif";
-  src: url("/fonts/atkinson-bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
+	font-family: "Manrope, sans-serif";
+	src: url("/fonts/atkinson-bold.woff") format("woff");
+	font-weight: 700;
+	font-style: normal;
+	font-display: swap;
 }
 
 body {
-  font-family: "Manrope", sans-serif;
-  margin: 0;
-  padding: 0;
-  text-align: left;
-  background: linear-gradient(var(--gray-gradient)) no-repeat;
-  background-size: 100% 600px;
-  color: white;
+	font-family: "Manrope", sans-serif;
+	margin: 0;
+	padding: 0;
+	text-align: left;
+	background: linear-gradient(var(--gray-gradient)) no-repeat;
+	background-size: 100% 600px;
+	color: white;
 }
 
 main {
-  margin: auto;
-  background-color: #141416;
+	margin: auto;
+	background-color: #141416;
 }
 
 .padding-global {
-  padding-left: 5%;
-  padding-right: 5%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 .padding-extra {
-  padding-left: 4rem;
-  padding-right: 4rem;
+	padding-left: 4rem;
+	padding-right: 4rem;
 }
 
 @media (max-width: 640px) {
-  .padding-extra {
-    padding-left: 0;
-    padding-right: 0;
-  }
+	.padding-extra {
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
 
 .container {
-  margin: auto;
+	margin: auto;
 }
 
 .container-large {
-  max-width: 1400px;
+	max-width: 1400px;
 }
 
 /* text and header stylings */
 h1 {
-  font-size: 3rem;
-  line-height: 3.25rem;
+	font-size: 3rem;
+	line-height: 3.25rem;
 }
 
 @media (max-width: 1024px) {
-  h1 {
-    font-size: 2.25rem;
-    line-height: 2.75rem;
-  }
+	h1 {
+		font-size: 2.25rem;
+		line-height: 2.75rem;
+	}
 }
 
 h2 {
-  font-size: 2.4rem;
-  line-height: 3rem;
-  letter-spacing: 1px;
+	font-size: 2.4rem;
+	line-height: 3rem;
+	letter-spacing: 1px;
 }
 
 @media (max-width: 1024px) {
-  h2 {
-    font-size: 2rem;
-    line-height: 2.25rem;
-  }
+	h2 {
+		font-size: 2rem;
+		line-height: 2.25rem;
+	}
 }
 
 h3 {
-  font-family: "IBM Plex Mono", monospace;
-  font-weight: 400;
-  font-size: 1.12rem;
-  line-height: 1.75rem;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
+	font-family: "IBM Plex Mono", monospace;
+	font-weight: 400;
+	font-size: 1.12rem;
+	line-height: 1.75rem;
+	text-transform: uppercase;
+	letter-spacing: 0.5px;
 }
 
 h4 {
-  font-size: 1.8rem;
-  line-height: 1.75rem;
-  @apply text-purple;
+	font-size: 1.8rem;
+	line-height: 1.75rem;
+	@apply text-purple;
 }
 
 h5 {
-  font-family: "IBM Plex Mono", monospace;
-  font-weight: 400;
-  font-size: 1.2rem;
-  line-height: 1.5rem;
-  text-transform: uppercase;
-  color: rgb(217, 215, 215);
+	font-family: "IBM Plex Mono", monospace;
+	font-weight: 400;
+	font-size: 1.2rem;
+	line-height: 1.5rem;
+	text-transform: uppercase;
+	color: rgb(217, 215, 215);
 }
 
 h6 {
-  font-family: "IBM Plex Mono", monospace;
-  font-weight: 400;
-  font-size: 0.85rem;
-  color: rgb(217, 215, 215);
+	font-family: "IBM Plex Mono", monospace;
+	font-weight: 400;
+	font-size: 0.85rem;
+	color: rgb(217, 215, 215);
 
-  text-transform: uppercase;
-  /* text-decoration: underline; */
-  letter-spacing: 1px;
+	text-transform: uppercase;
+	/* text-decoration: underline; */
+	letter-spacing: 1px;
 }
 
 p {
-  font-size: 1rem;
-  line-height: 1.6rem;
-  letter-spacing: 0.5px;
-  font-weight: 300;
-  margin-bottom: 1rem;
+	font-size: 1rem;
+	line-height: 1.6rem;
+	letter-spacing: 0.5px;
+	font-weight: 300;
+	margin-bottom: 1rem;
 }
 
 span {
-  font-size: 1rem;
+	font-size: 1rem;
 }
 
 a {
-  letter-spacing: 0.5px;
-  font-weight: 300;
+	letter-spacing: 0.5px;
+	font-weight: 300;
 }
 
 /* Carousel */
 
 .swiper-button-prev,
 .swiper-button-next {
-  color: purple !important;
+	color: purple !important;
 }
 
 /* screen reader */
 .sr-only {
-  border: 0;
-  padding: 0;
-  margin: 0;
-  position: absolute !important;
-  height: 1px;
-  width: 1px;
-  /* overflow: hidden; */
-  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
-  clip: rect(1px 1px 1px 1px);
-  /* maybe deprecated but we need to support legacy browsers */
-  clip: rect(1px, 1px, 1px, 1px);
-  /* modern browsers, clip-path works inwards from each corner */
-  clip-path: inset(50%);
-  /* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
-  white-space: nowrap;
+	border: 0;
+	padding: 0;
+	margin: 0;
+	position: absolute !important;
+	height: 1px;
+	width: 1px;
+	/* overflow: hidden; */
+	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
+	clip: rect(1px 1px 1px 1px);
+	/* maybe deprecated but we need to support legacy browsers */
+	clip: rect(1px, 1px, 1px, 1px);
+	/* modern browsers, clip-path works inwards from each corner */
+	clip-path: inset(50%);
+	/* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
+	white-space: nowrap;
 }
 
 .gradient-background {
-  /* background: linear-gradient(-45deg, #121275 20%, #5b5bfa, #732669); */
-  /* background: linear-gradient(-45deg, #732669 10%, #121275 15%, #5b5bfa 95%); */
-  /* background: linear-gradient(-45deg, #5b5bfa, #732669 50%, #121275 75%); */
-  background: linear-gradient(135deg, #4b4bfa 40%, #732669 65%, #121275 90%);
-  background-size: 400% 400%;
-  animation: gradient 25s ease infinite;
+	/* background: linear-gradient(-45deg, #121275 20%, #5b5bfa, #732669); */
+	/* background: linear-gradient(-45deg, #732669 10%, #121275 15%, #5b5bfa 95%); */
+	/* background: linear-gradient(-45deg, #5b5bfa, #732669 50%, #121275 75%); */
+	background: linear-gradient(135deg, #4b4bfa 40%, #732669 65%, #121275 90%);
+	background-size: 400% 400%;
+	animation: gradient 25s ease infinite;
 }
 
 .gradient-background-2 {
-  /* background: linear-gradient(-45deg, #121275 20%, #5b5bfa, #732669); */
-  /* background: linear-gradient(-45deg, #732669 10%, #121275 15%, #5b5bfa 95%); */
-  /* background: linear-gradient(-45deg, #5b5bfa, #732669 50%, #121275 75%); */
-  background: linear-gradient(155deg, #4b4bfa 20%, #732669 70%, #121275 80%);
-  background-size: 400% 400%;
-  animation: gradient 25s ease infinite;
+	/* background: linear-gradient(-45deg, #121275 20%, #5b5bfa, #732669); */
+	/* background: linear-gradient(-45deg, #732669 10%, #121275 15%, #5b5bfa 95%); */
+	/* background: linear-gradient(-45deg, #5b5bfa, #732669 50%, #121275 75%); */
+	background: linear-gradient(155deg, #4b4bfa 20%, #732669 70%, #121275 80%);
+	background-size: 400% 400%;
+	animation: gradient 25s ease infinite;
 }
 
 @keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 /* BLOG STYLES */
 
 article h1 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 
-  font-size: 2.5rem;
-  line-height: 3rem;
-  font-weight: 500;
+	font-size: 2.5rem;
+	line-height: 3rem;
+	font-weight: 500;
 }
 
 article a {
-  text-decoration: underline;
-  @apply text-white;
-  @apply hover:text-lightBlue;
+	text-decoration: underline;
+	@apply text-white;
+	@apply hover:text-lightBlue;
 }
 
 article button {
-  @apply text-white;
+	@apply text-white;
 }
 
 .blog-post h2 {
-  font-size: 2rem;
-  color: rgb(137, 170, 255);
-  line-height: 2.5rem;
-  margin-top: 3rem;
-  margin-bottom: 0.75rem;
+	font-size: 2rem;
+	color: rgb(137, 170, 255);
+	line-height: 2.5rem;
+	margin-top: 3rem;
+	margin-bottom: 0.75rem;
 }
 
 .blog-post h2:first-of-type {
-  margin-top: 1rem;
+	margin-top: 1rem;
 }
 
 .blog-post h2,
@@ -237,88 +237,86 @@ article button {
 .blog-post h4,
 .blog-post h5,
 .blog-post h6 {
-  font-weight: 500;
+	font-weight: 500;
 }
 
 .blog-post img {
-  margin-top: 2.5rem;
+	margin-top: 2.5rem;
 }
 
 .caption {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  text-align: center;
-  width: 100%;
-  margin-top: -0.5rem;
-  margin-bottom: 2rem;
-  color: grey;
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+	text-align: center;
+	width: 100%;
+	margin-top: -0.5rem;
+	margin-bottom: 2rem;
+	color: grey;
 }
 
 .blog-post p {
-  margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
 
 .button {
-  line-height: inherit;
-  padding-top: 0.75em;
-  padding-bottom: 0.7em;
-  /* border: 0.5px solid white; */
-  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
-  outline: 1px solid;
-  outline-color: rgba(255, 255, 255, 0.5);
-  outline-offset: 0px;
-  text-shadow: none;
-  transition:
-    all 1250ms cubic-bezier(0.19, 1, 0.22, 1),
-    color 100ms cubic-bezier(0.19, 1, 0.22, 1);
-  font-weight: 500;
-  letter-spacing: 0.5px;
+	line-height: inherit;
+	padding-top: 0.75em;
+	padding-bottom: 0.7em;
+	/* border: 0.5px solid white; */
+	box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+	outline: 1px solid;
+	outline-color: rgba(255, 255, 255, 0.5);
+	outline-offset: 0px;
+	text-shadow: none;
+	transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1), color 100ms
+		cubic-bezier(0.19, 1, 0.22, 1);
+	font-weight: 500;
+	letter-spacing: 0.5px;
 }
 
 .button-primary {
-  position: relative;
-  color: black;
-  mix-blend-mode: screen;
+	position: relative;
+	color: black;
+	mix-blend-mode: screen;
 }
 
 .button-primary::before {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: white;
-  border-radius: 2em;
-  content: "";
-  mix-blend-mode: color-burn;
-  pointer-events: none;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: white;
+	border-radius: 2em;
+	content: "";
+	mix-blend-mode: color-burn;
+	pointer-events: none;
 }
 
 .button-text {
-  display: block;
-  transform: translateY(-1.5px);
+	display: block;
+	transform: translateY(-1.5px);
 }
 
 .button:hover {
-  box-shadow:
-    inset 0 0 20px rgba(255, 255, 255, 0.5),
-    0 0 20px rgba(255, 255, 255, 0.2);
-  outline-color: rgba(255, 255, 255, 0);
-  outline-offset: 15px;
-  /* text-shadow: 1px 1px 2px #427388; */
+	box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5), 0 0 20px
+		rgba(255, 255, 255, 0.2);
+	outline-color: rgba(255, 255, 255, 0);
+	outline-offset: 15px;
+	/* text-shadow: 1px 1px 2px #427388; */
 }
 
 .button-primary:hover {
-  background-color: rgb(137, 170, 255);
-  color: white;
+	background-color: rgb(137, 170, 255);
+	color: white;
 }
 
 .button-secondary:hover {
-  background-color: rgb(190, 183, 254);
+	background-color: rgb(190, 183, 254);
 }
 
 .button-tertiary:hover {
-  background-color: rgb(190, 183, 254);
+	background-color: rgb(190, 183, 254);
 }
 
 /* .primary-button:hover .button-text {
